--- a/hypnosismic-1.plist
+++ b/hypnosismic-1.plist
@@ -118,21 +118,21 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>メイソン</string>
+		<string>理鶯</string>
 		<key>shortcut</key>
-		<string>めいそん</string>
+		<string>りおう</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
 		<string>🐦</string>
 		<key>shortcut</key>
-		<string>めいそん</string>
+		<string>りおう</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
 		<string>Crazy M</string>
 		<key>shortcut</key>
-		<string>めいそん</string>
+		<string>りおう</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
