--- a/hypnosismic-2.plist
+++ b/hypnosismic-2.plist
@@ -10,7 +10,7 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>Heaven & Hell</string>
+		<string>Heaven &amp; Hell</string>
 		<key>shortcut</key>
 		<string>ひとや</string>
 	</dict>
