:high_heel: Add 中王区

--- a/hypnosismic-2.plist
+++ b/hypnosismic-2.plist
@@ -44,5 +44,11 @@
 		<key>shortcut</key>
 		<string>ねむ</string>
 	</dict>
+		<dict>
+		<key>phrase</key>
+		<string>中王区</string>
+		<key>shortcut</key>
+		<string>ちゅうおうく</string>
+	</dict>
 </array>
 </plist>
